@@ -4,12 +4,17 @@ import com.aventstack.extentreports.ExtentReports;
 import com.aventstack.extentreports.ExtentTest;
 import com.aventstack.extentreports.reporter.ExtentSparkReporter;
 import com.aventstack.extentreports.reporter.configuration.Theme;
+import com.demoproject.base.BaseClass;
+import org.apache.commons.io.FileUtils;
+import org.openqa.selenium.OutputType;
+import org.openqa.selenium.TakesScreenshot;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.devtools.v141.systeminfo.SystemInfo;
 
 import java.io.File;
+import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Properties;
 
 public class ExtentManager {
     private static ExtentReports extentReports;
@@ -29,6 +34,14 @@ public class ExtentManager {
             extentReports.setSystemInfo("Operating System", System.getProperty("os.name"));
             extentReports.setSystemInfo("Java version", System.getProperty("java.version"));
             extentReports.setSystemInfo("User name", System.getProperty("user.name"));
+
+            Properties prop = BaseClass.getProperties();
+            if (prop != null && prop.getProperty("environment") != null) {
+                extentReports.setSystemInfo("Environment", prop.getProperty("environment"));
+            }
+            if (prop != null && prop.getProperty("browser") != null) {
+                extentReports.setSystemInfo("Browser", prop.getProperty("browser"));
+            }
         }
         return extentReports;
     }
@@ -57,8 +70,33 @@ public class ExtentManager {
     }
 
     public static void registerWebDriver(WebDriver driver){
-        driverMap.put(Thread.currentThread().getId(), driver);
+        driverMap.put(Thread.currentThread().threadId(), driver);
     }
 
+    public static WebDriver getRegisteredWebDriver(){
+        return driverMap.get(Thread.currentThread().threadId());
+    }
 
+    public static void unregisterWebDriver(){
+        driverMap.remove(Thread.currentThread().threadId());
+    }
+
+    public static String captureScreenshot(String testName){
+        WebDriver driver = getRegisteredWebDriver();
+        if (driver == null) {
+            return null;
+        }
+        try {
+            File src = ((TakesScreenshot) driver).getScreenshotAs(OutputType.FILE);
+            String path = System.getProperty("user.dir")
+                    + "/target/ExtentReport/screenshots/"
+                    + testName + "_" + System.currentTimeMillis() + ".png";
+            File dest = new File(path);
+            dest.getParentFile().mkdirs();
+            FileUtils.copyFile(src, dest);
+            return path;
+        } catch (IOException e) {
+            return null;
+        }
+    }
 }
